# sber-agents

./: README.md
02-llm-api/project/: Makefile  report.md
02-llm-api/project/src/: bot.py
03-aidd/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  report.md
03-aidd/docs/: conventions.md  idea.md  tasklist.md  vision.md  workflow.md
03-aidd/src/cook_assistant/: __init__.py  bot.py  config.py  llm.py  storage.py  utils.py
04-multimodal/live/src/: handlers.py  models.py
05-rag-langchain/: count_chunks.py  count_chunks_v2.py  report.md
05-rag-langchain/docs/references/: naive-rag.ipynb
05-rag-langchain/prompts/: conversation_system.txt
05-rag-langchain/src/: handlers.py  indexer.py  indexer_with_json.py
06-monitoring-qa/: report.md
07-advanced-rag/: report.md
docs/: idea.md
