[project]
name = "cook-assistant"
version = "0.1.0"
description = "Telegram bot culinary assistant with LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]